--- a/blog-single.html
+++ b/blog-single.html
@@ -606,7 +606,7 @@
 			<div class="container">
 				<div class="row">
 					<p class="pull-left">Copyright © 2020 Karya Utama Inc. All rights reserved.</p>
-					<p class="pull-right">Designed by <span><a target="_blank" href="http://www.themeum.com">Themeum</a></span></p>
+					<p class="pull-right">Designed by <span><a target="_blank" href="http://www.Karyautama.com">Karyautama</a></span></p>
 				</div>
 			</div>
 		</div>
