--- a/shop.html
+++ b/shop.html
@@ -768,7 +768,7 @@
 			<div class="container">
 				<div class="row">
 					<p class="pull-left">Copyright © 2020 Karya Utama. All rights reserved.</p>
-					<p class="pull-right">Designed by <span><a target="_blank" href="http://www.themeum.com">Themeum</a></span></p>
+					<p class="pull-right">Designed by <span><a target="_blank" href="http://www.Karyautama.com">Karyautama</a></span></p>
 				</div>
 			</div>
 		</div>
